Fix post paragraph spacing

--- a/less/post.less
+++ b/less/post.less
@@ -51,7 +51,7 @@ main {
       }
 
       p, ul {
-        marting-top: 0.5em;
+        margin-top: 0.5em;
       }
 
       ul {
